changed fixed units to relatives and removed the ugly scrollbar

--- a/css/ABOUT.css
+++ b/css/ABOUT.css
@@ -25,26 +25,26 @@
     scale: 1.15;
 }
 .about--title {
-    letter-spacing: 1.2px;
-    font-size: 30px;
+    letter-spacing: 0.075rem;
+    font-size: 2rem;
     animation: title-glow 7s infinite;
 }
 .hello{
     color: var(--light);
-    font-size: 2rem;
+    font-size: 3rem;
     opacity: .4;
     font-family: 'Oswald', sans-serif;
     font-weight: 500;
     text-align: center;
 }
-.hello span{font-size: 2rem;}
+.hello span{font-size: 2.7rem;}
 .hr{
-    width: 250px;
+    width: 15.5rem;
     background: rgba(190, 190, 190, 0.367);
 }
-
+.typeParagraph{font-size: 1.4rem;}
 #typewriter{
-    color: var(--light);
+    color: var(--light);font-size: inherit;
 }
 
 #About-cursor{
@@ -85,7 +85,7 @@
 }
 .about-me_content p {
     padding: 15px;
-	font-size: 21px;
+	font-size: 1.3rem;
 	line-height: 1.5;
 	margin-bottom: 30px;
 }
@@ -106,7 +106,7 @@
     color: #212121;
     border:2px solid #212121;
 	background-color: #8a21fb;
-	font-size: 16px;
+	font-size: 1rem;
 	font-weight: bold;
     margin: 0 5px;
 	padding: 10px 20px;
@@ -157,13 +157,13 @@
     aspect-ratio: 2/1;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
 	.about-me_content{
 		flex-direction: row-reverse;
 	}
 }
 
-@media (max-width: 768px) {
+@media (max-width: 48rem) {
 	.about-me_content {flex-direction: column;}
     .about-me_content .skills li{filter: grayscale(0);}
     .about-container-bg{height: auto;}
