--- a/css/HEADER.css
+++ b/css/HEADER.css
@@ -4,7 +4,7 @@ header{
     top: 0;
     left: 0;
     right: 0;
-    height: 100px;
+    height: 6.25rem;
 }
 .header__container{
     background-color: var(--Primary-bg);
@@ -119,7 +119,7 @@ display: none;
 .hamb-links{
 display: none;
 }
-@media screen and (max-width:866px){
+@media screen and (max-width:54.125rem){
   .nav-links,.cursor{display: none;}
 
   .head-notch{
@@ -162,8 +162,8 @@ display: none;
 
   .hamburger span{
     display: block;
-    width: 33px;
-    height: 4px;
+    width: 2.05rem;
+    height: .25rem;
     margin-bottom: 5px;
     position: relative;
     background-color: var(--light);
@@ -239,19 +239,19 @@ display: none;
       
 
   .active-links{
-  display: block;
-  text-decoration: none;
-  list-style: none;
-  margin: 35px 70px 30px 35px;
+    display: block;
+    text-decoration: none;
+    list-style: none;
+    margin: 35px 70px 30px 35px;
   }
 
   .active-links li {
-  margin: 15px;
-  font-size: 20px;
+    margin: 15px;
+    font-size: 1.25rem;
   }
 }
 
-@media screen and (max-width:677px){
-.btn{display: none;}
-.logo{margin-right: .5rem;}
+@media screen and (max-width:42.3rem){
+  .btn{display: none;}
+  .logo{margin-right: .5rem;}
 }
